Geometrik/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    RETURN
    FUNCTIONID
    BREAK
    PERIOD
    PARAMID

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON programvars programfunction block
Rule 2     programvars -> vars
Rule 3     programvars -> empty
Rule 4     programfunction -> function programfunction
Rule 5     programfunction -> empty
Rule 6     block -> LBRACE blockprima RBRACE
Rule 7     blockprima -> statute blockprima
Rule 8     blockprima -> empty
Rule 9     statute -> assignment
Rule 10    statute -> condition
Rule 11    statute -> write
Rule 12    statute -> read
Rule 13    statute -> cycle
Rule 14    statute -> functioncall
Rule 15    statute -> predefined
Rule 16    condition -> IF LPAREN singularexp2 RPAREN block
Rule 17    condition -> IF LPAREN functioncall RPAREN block
Rule 18    condition -> IF LPAREN singularexp2 RPAREN block ELSE block
Rule 19    condition -> IF LPAREN functioncall RPAREN block ELSE block
Rule 20    condition -> IF LPAREN NOT singularexp2 RPAREN block
Rule 21    condition -> IF LPAREN NOT functioncall RPAREN block
Rule 22    condition -> IF LPAREN NOT singularexp2 RPAREN block ELSE block
Rule 23    condition -> IF LPAREN NOT functioncall RPAREN block ELSE block
Rule 24    vars -> VAR ID varsprima COLON type SEMICOLON
Rule 25    varsprima -> COMMA ID varsprima
Rule 26    varsprima -> empty
Rule 27    type -> INTTYPE
Rule 28    type -> FLOATTYPE
Rule 29    type -> STRINGTYPE
Rule 30    type -> BOOLEANTYPE
Rule 31    type -> array
Rule 32    array -> INTTYPE LBRACKET ID RBRACKET
Rule 33    array -> INTTYPE LBRACKET NUMBER RBRACKET
Rule 34    array -> FLOATTYPE LBRACKET NUMBER RBRACKET
Rule 35    array -> FLOATTYPE LBRACKET ID RBRACKET
Rule 36    array -> STRING LBRACKET ID RBRACKET
Rule 37    array -> STRING LBRACKET NUMBER RBRACKET
Rule 38    assignment -> ID ASSIGN singularexp2 SEMICOLON
Rule 39    assignment -> ID ASSIGN functioncall
Rule 40    singularexp2 -> singularexp
Rule 41    singularexp2 -> NOT singularexp
Rule 42    singularexp -> singularexp AND expression
Rule 43    singularexp -> singularexp OR expression
Rule 44    singularexp -> expression
Rule 45    expression -> expression LESSER exp
Rule 46    expression -> expression GREATER exp
Rule 47    expression -> expression EQUAL exp
Rule 48    expression -> expression NOTEQUAL exp
Rule 49    expression -> expression LESSEROREQUAL exp
Rule 50    expression -> expression GREATEROREQUAL exp
Rule 51    expression -> exp
Rule 52    exp -> exp PLUS term
Rule 53    exp -> exp MINUS term
Rule 54    exp -> term
Rule 55    term -> term TIMES factor
Rule 56    term -> term DEVIDE factor
Rule 57    term -> factor
Rule 58    factor -> LPAREN singularexp2 RPAREN
Rule 59    factor -> PLUS varcte
Rule 60    factor -> MINUS varcte
Rule 61    factor -> varcte
Rule 62    varcte -> INT
Rule 63    varcte -> FLOAT
Rule 64    varcte -> STRING
Rule 65    varcte -> ID
Rule 66    varcte -> bool
Rule 67    bool -> TRUE
Rule 68    bool -> FALSE
Rule 69    functioncall -> ID LPAREN RPAREN SEMICOLON
Rule 70    functioncall -> ID LPAREN funcparam RPAREN SEMICOLON
Rule 71    funcparam -> singularexp2 funcparamprima
Rule 72    funcparam -> ID funcparamprima
Rule 73    funcparamprima -> COMMA funcparam
Rule 74    funcparamprima -> empty
Rule 75    function -> FUNCTION VOID ID LPAREN parameter RPAREN block
Rule 76    function -> FUNCTION type ID LPAREN parameter RPAREN block
Rule 77    function -> FUNCTION VOID ID LPAREN RPAREN block
Rule 78    function -> FUNCTION type ID LPAREN RPAREN block
Rule 79    parameter -> type ID parameterprima
Rule 80    parameterprima -> COMMA type ID parameterprima
Rule 81    parameterprima -> empty
Rule 82    write -> PRINT LPAREN singularexp2 RPAREN SEMICOLON
Rule 83    write -> PRINT LPAREN ID RPAREN SEMICOLON
Rule 84    read -> ID ASSIGN INPUT SEMICOLON
Rule 85    cycle -> WHILE LPAREN singularexp2 RPAREN block
Rule 86    color -> BLUE
Rule 87    color -> GREEN
Rule 88    color -> RED
Rule 89    color -> YELLOW
Rule 90    color -> BROWN
Rule 91    color -> BLACK
Rule 92    predefined -> drawline
Rule 93    predefined -> drawsquare
Rule 94    predefined -> drawtriangle
Rule 95    predefined -> drawcircle
Rule 96    predefined -> drawcurve
Rule 97    predefined -> drawpolygon
Rule 98    drawline -> DRAWLINE LPAREN idssexp COMMA idssexp COMMA idssexp COMMA idssexp COMMA color RPAREN SEMICOLON
Rule 99    drawsquare -> DRAWSQUARE LPAREN idssexp COMMA idssexp COMMA color RPAREN SEMICOLON
Rule 100   drawtriangle -> DRAWTRIANGLE LPAREN idssexp COMMA idssexp COMMA color RPAREN SEMICOLON
Rule 101   drawcircle -> DRAWCIRCLE LPAREN idssexp COMMA idssexp COMMA color RPAREN SEMICOLON
Rule 102   drawcurve -> DRAWCURVE LPAREN idssexp COMMA idssexp COMMA color RPAREN SEMICOLON
Rule 103   drawpolygon -> DRAWPOLYGON LPAREN idssexp COMMA idssexp COMMA color RPAREN SEMICOLON
Rule 104   idssexp -> ID
Rule 105   idssexp -> singularexp2
Rule 106   empty -> <empty>

Terminals, with rules where they appear

AND                  : 42
ASSIGN               : 38 39 84
BLACK                : 91
BLUE                 : 86
BOOLEANTYPE          : 30
BREAK                : 
BROWN                : 90
COLON                : 24
COMMA                : 25 73 80 98 98 98 98 99 99 100 100 101 101 102 102 103 103
DEVIDE               : 56
DRAWCIRCLE           : 101
DRAWCURVE            : 102
DRAWLINE             : 98
DRAWPOLYGON          : 103
DRAWSQUARE           : 99
DRAWTRIANGLE         : 100
ELSE                 : 18 19 22 23
EQUAL                : 47
FALSE                : 68
FLOAT                : 63
FLOATTYPE            : 28 34 35
FUNCTION             : 75 76 77 78
FUNCTIONID           : 
GREATER              : 46
GREATEROREQUAL       : 50
GREEN                : 87
ID                   : 1 24 25 32 35 36 38 39 65 69 70 72 75 76 77 78 79 80 83 84 104
IF                   : 16 17 18 19 20 21 22 23
INPUT                : 84
INT                  : 62
INTTYPE              : 27 32 33
LBRACE               : 6
LBRACKET             : 32 33 34 35 36 37
LESSER               : 45
LESSEROREQUAL        : 49
LPAREN               : 16 17 18 19 20 21 22 23 58 69 70 75 76 77 78 82 83 85 98 99 100 101 102 103
MINUS                : 53 60
NOT                  : 20 21 22 23 41
NOTEQUAL             : 48
NUMBER               : 33 34 37
OR                   : 43
PARAMID              : 
PERIOD               : 
PLUS                 : 52 59
PRINT                : 82 83
PROGRAM              : 1
RBRACE               : 6
RBRACKET             : 32 33 34 35 36 37
RED                  : 88
RETURN               : 
RPAREN               : 16 17 18 19 20 21 22 23 58 69 70 75 76 77 78 82 83 85 98 99 100 101 102 103
SEMICOLON            : 1 24 38 69 70 82 83 84 98 99 100 101 102 103
STRING               : 36 37 64
STRINGTYPE           : 29
TIMES                : 55
TRUE                 : 67
VAR                  : 24
VOID                 : 75 77
WHILE                : 85
YELLOW               : 89
error                : 

Nonterminals, with rules where they appear

array                : 31
assignment           : 9
block                : 1 16 17 18 18 19 19 20 21 22 22 23 23 75 76 77 78 85
blockprima           : 6 7
bool                 : 66
color                : 98 99 100 101 102 103
condition            : 10
cycle                : 13
drawcircle           : 95
drawcurve            : 96
drawline             : 92
drawpolygon          : 97
drawsquare           : 93
drawtriangle         : 94
empty                : 3 5 8 26 74 81
exp                  : 45 46 47 48 49 50 51 52 53
expression           : 42 43 44 45 46 47 48 49 50
factor               : 55 56 57
funcparam            : 70 73
funcparamprima       : 71 72
function             : 4
functioncall         : 14 17 19 21 23 39
idssexp              : 98 98 98 98 99 99 100 100 101 101 102 102 103 103
parameter            : 75 76
parameterprima       : 79 80
predefined           : 15
program              : 0
programfunction      : 1 4
programvars          : 1
read                 : 12
singularexp          : 40 41 42 43
singularexp2         : 16 18 20 22 38 58 71 82 85 105
statute              : 7
term                 : 52 53 54 55 56
type                 : 24 76 78 79 80
varcte               : 59 60 61
vars                 : 2
varsprima            : 24 25
write                : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON programvars programfunction block

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON programvars programfunction block

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON programvars programfunction block

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . programvars programfunction block
    (2) programvars -> . vars
    (3) programvars -> . empty
    (24) vars -> . VAR ID varsprima COLON type SEMICOLON
    (106) empty -> .

    VAR             shift and go to state 7
    FUNCTION        reduce using rule 106 (empty -> .)
    LBRACE          reduce using rule 106 (empty -> .)

    vars                           shift and go to state 5
    programvars                    shift and go to state 8
    empty                          shift and go to state 6

state 5

    (2) programvars -> vars .

    FUNCTION        reduce using rule 2 (programvars -> vars .)
    LBRACE          reduce using rule 2 (programvars -> vars .)


state 6

    (3) programvars -> empty .

    FUNCTION        reduce using rule 3 (programvars -> empty .)
    LBRACE          reduce using rule 3 (programvars -> empty .)


state 7

    (24) vars -> VAR . ID varsprima COLON type SEMICOLON

    ID              shift and go to state 9


state 8

    (1) program -> PROGRAM ID SEMICOLON programvars . programfunction block
    (4) programfunction -> . function programfunction
    (5) programfunction -> . empty
    (75) function -> . FUNCTION VOID ID LPAREN parameter RPAREN block
    (76) function -> . FUNCTION type ID LPAREN parameter RPAREN block
    (77) function -> . FUNCTION VOID ID LPAREN RPAREN block
    (78) function -> . FUNCTION type ID LPAREN RPAREN block
    (106) empty -> .

    FUNCTION        shift and go to state 11
    LBRACE          reduce using rule 106 (empty -> .)

    function                       shift and go to state 10
    programfunction                shift and go to state 13
    empty                          shift and go to state 12

state 9

    (24) vars -> VAR ID . varsprima COLON type SEMICOLON
    (25) varsprima -> . COMMA ID varsprima
    (26) varsprima -> . empty
    (106) empty -> .

    COMMA           shift and go to state 14
    COLON           reduce using rule 106 (empty -> .)

    varsprima                      shift and go to state 15
    empty                          shift and go to state 16

state 10

    (4) programfunction -> function . programfunction
    (4) programfunction -> . function programfunction
    (5) programfunction -> . empty
    (75) function -> . FUNCTION VOID ID LPAREN parameter RPAREN block
    (76) function -> . FUNCTION type ID LPAREN parameter RPAREN block
    (77) function -> . FUNCTION VOID ID LPAREN RPAREN block
    (78) function -> . FUNCTION type ID LPAREN RPAREN block
    (106) empty -> .

    FUNCTION        shift and go to state 11
    LBRACE          reduce using rule 106 (empty -> .)

    function                       shift and go to state 10
    programfunction                shift and go to state 17
    empty                          shift and go to state 12

state 11

    (75) function -> FUNCTION . VOID ID LPAREN parameter RPAREN block
    (76) function -> FUNCTION . type ID LPAREN parameter RPAREN block
    (77) function -> FUNCTION . VOID ID LPAREN RPAREN block
    (78) function -> FUNCTION . type ID LPAREN RPAREN block
    (27) type -> . INTTYPE
    (28) type -> . FLOATTYPE
    (29) type -> . STRINGTYPE
    (30) type -> . BOOLEANTYPE
    (31) type -> . array
    (32) array -> . INTTYPE LBRACKET ID RBRACKET
    (33) array -> . INTTYPE LBRACKET NUMBER RBRACKET
    (34) array -> . FLOATTYPE LBRACKET NUMBER RBRACKET
    (35) array -> . FLOATTYPE LBRACKET ID RBRACKET
    (36) array -> . STRING LBRACKET ID RBRACKET
    (37) array -> . STRING LBRACKET NUMBER RBRACKET

    VOID            shift and go to state 21
    INTTYPE         shift and go to state 23
    FLOATTYPE       shift and go to state 19
    STRINGTYPE      shift and go to state 18
    BOOLEANTYPE     shift and go to state 22
    STRING          shift and go to state 25

    type                           shift and go to state 20
    array                          shift and go to state 24

state 12

    (5) programfunction -> empty .

    LBRACE          reduce using rule 5 (programfunction -> empty .)


state 13

    (1) program -> PROGRAM ID SEMICOLON programvars programfunction . block
    (6) block -> . LBRACE blockprima RBRACE

    LBRACE          shift and go to state 26

    block                          shift and go to state 27

state 14

    (25) varsprima -> COMMA . ID varsprima

    ID              shift and go to state 28


state 15

    (24) vars -> VAR ID varsprima . COLON type SEMICOLON

    COLON           shift and go to state 29


state 16

    (26) varsprima -> empty .

    COLON           reduce using rule 26 (varsprima -> empty .)


state 17

    (4) programfunction -> function programfunction .

    LBRACE          reduce using rule 4 (programfunction -> function programfunction .)


state 18

    (29) type -> STRINGTYPE .

    ID              reduce using rule 29 (type -> STRINGTYPE .)
    SEMICOLON       reduce using rule 29 (type -> STRINGTYPE .)


state 19

    (28) type -> FLOATTYPE .
    (34) array -> FLOATTYPE . LBRACKET NUMBER RBRACKET
    (35) array -> FLOATTYPE . LBRACKET ID RBRACKET

    ID              reduce using rule 28 (type -> FLOATTYPE .)
    SEMICOLON       reduce using rule 28 (type -> FLOATTYPE .)
    LBRACKET        shift and go to state 30


state 20

    (76) function -> FUNCTION type . ID LPAREN parameter RPAREN block
    (78) function -> FUNCTION type . ID LPAREN RPAREN block

    ID              shift and go to state 31


state 21

    (75) function -> FUNCTION VOID . ID LPAREN parameter RPAREN block
    (77) function -> FUNCTION VOID . ID LPAREN RPAREN block

    ID              shift and go to state 32


state 22

    (30) type -> BOOLEANTYPE .

    ID              reduce using rule 30 (type -> BOOLEANTYPE .)
    SEMICOLON       reduce using rule 30 (type -> BOOLEANTYPE .)


state 23

    (27) type -> INTTYPE .
    (32) array -> INTTYPE . LBRACKET ID RBRACKET
    (33) array -> INTTYPE . LBRACKET NUMBER RBRACKET

    ID              reduce using rule 27 (type -> INTTYPE .)
    SEMICOLON       reduce using rule 27 (type -> INTTYPE .)
    LBRACKET        shift and go to state 33


state 24

    (31) type -> array .

    ID              reduce using rule 31 (type -> array .)
    SEMICOLON       reduce using rule 31 (type -> array .)


state 25

    (36) array -> STRING . LBRACKET ID RBRACKET
    (37) array -> STRING . LBRACKET NUMBER RBRACKET

    LBRACKET        shift and go to state 34


state 26

    (6) block -> LBRACE . blockprima RBRACE
    (7) blockprima -> . statute blockprima
    (8) blockprima -> . empty
    (9) statute -> . assignment
    (10) statute -> . condition
    (11) statute -> . write
    (12) statute -> . read
    (13) statute -> . cycle
    (14) statute -> . functioncall
    (15) statute -> . predefined
    (106) empty -> .
    (38) assignment -> . ID ASSIGN singularexp2 SEMICOLON
    (39) assignment -> . ID ASSIGN functioncall
    (16) condition -> . IF LPAREN singularexp2 RPAREN block
    (17) condition -> . IF LPAREN functioncall RPAREN block
    (18) condition -> . IF LPAREN singularexp2 RPAREN block ELSE block
    (19) condition -> . IF LPAREN functioncall RPAREN block ELSE block
    (20) condition -> . IF LPAREN NOT singularexp2 RPAREN block
    (21) condition -> . IF LPAREN NOT functioncall RPAREN block
    (22) condition -> . IF LPAREN NOT singularexp2 RPAREN block ELSE block
    (23) condition -> . IF LPAREN NOT functioncall RPAREN block ELSE block
    (82) write -> . PRINT LPAREN singularexp2 RPAREN SEMICOLON
    (83) write -> . PRINT LPAREN ID RPAREN SEMICOLON
    (84) read -> . ID ASSIGN INPUT SEMICOLON
    (85) cycle -> . WHILE LPAREN singularexp2 RPAREN block
    (69) functioncall -> . ID LPAREN RPAREN SEMICOLON
    (70) functioncall -> . ID LPAREN funcparam RPAREN SEMICOLON
    (92) predefined -> . drawline
    (93) predefined -> . drawsquare
    (94) predefined -> . drawtriangle
    (95) predefined -> . drawcircle
    (96) predefined -> . drawcurve
    (97) predefined -> . drawpolygon
    (98) drawline -> . DRAWLINE LPAREN idssexp COMMA idssexp COMMA idssexp COMMA idssexp COMMA color RPAREN SEMICOLON
    (99) drawsquare -> . DRAWSQUARE LPAREN idssexp COMMA idssexp COMMA color RPAREN SEMICOLON
    (100) drawtriangle -> . DRAWTRIANGLE LPAREN idssexp COMMA idssexp COMMA color RPAREN SEMICOLON
    (101) drawcircle -> . DRAWCIRCLE LPAREN idssexp COMMA idssexp COMMA color RPAREN SEMICOLON
    (102) drawcurve -> . DRAWCURVE LPAREN idssexp COMMA idssexp COMMA color RPAREN SEMICOLON
    (103) drawpolygon -> . DRAWPOLYGON LPAREN idssexp COMMA idssexp COMMA color RPAREN SEMICOLON

    RBRACE          reduce using rule 106 (empty -> .)
    ID              shift and go to state 53
    IF              shift and go to state 55
    PRINT           shift and go to state 38
    WHILE           shift and go to state 37
    DRAWLINE        shift and go to state 52
    DRAWSQUARE      shift and go to state 44
    DRAWTRIANGLE    shift and go to state 36
    DRAWCIRCLE      shift and go to state 41
    DRAWCURVE       shift and go to state 58
    DRAWPOLYGON     shift and go to state 57

    predefined                     shift and go to state 39
    statute                        shift and go to state 56
    blockprima                     shift and go to state 40
    drawsquare                     shift and go to state 59
    read                           shift and go to state 49
    assignment                     shift and go to state 50
    drawcurve                      shift and go to state 51
    drawpolygon                    shift and go to state 48
    drawtriangle                   shift and go to state 35
    write                          shift and go to state 43
    drawline                       shift and go to state 42
    functioncall                   shift and go to state 60
    empty                          shift and go to state 47
    drawcircle                     shift and go to state 45
    condition                      shift and go to state 54
    cycle                          shift and go to state 46

state 27

    (1) program -> PROGRAM ID SEMICOLON programvars programfunction block .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON programvars programfunction block .)


state 28

    (25) varsprima -> COMMA ID . varsprima
    (25) varsprima -> . COMMA ID varsprima
    (26) varsprima -> . empty
    (106) empty -> .

    COMMA           shift and go to state 14
    COLON           reduce using rule 106 (empty -> .)

    varsprima                      shift and go to state 61
    empty                          shift and go to state 16

state 29

    (24) vars -> VAR ID varsprima COLON . type SEMICOLON
    (27) type -> . INTTYPE
    (28) type -> . FLOATTYPE
    (29) type -> . STRINGTYPE
    (30) type -> . BOOLEANTYPE
    (31) type -> . array
    (32) array -> . INTTYPE LBRACKET ID RBRACKET
    (33) array -> . INTTYPE LBRACKET NUMBER RBRACKET
    (34) array -> . FLOATTYPE LBRACKET NUMBER RBRACKET
    (35) array -> . FLOATTYPE LBRACKET ID RBRACKET
    (36) array -> . STRING LBRACKET ID RBRACKET
    (37) array -> . STRING LBRACKET NUMBER RBRACKET

    INTTYPE         shift and go to state 23
    FLOATTYPE       shift and go to state 19
    STRINGTYPE      shift and go to state 18
    BOOLEANTYPE     shift and go to state 22
    STRING          shift and go to state 25

    type                           shift and go to state 62
    array                          shift and go to state 24

state 30

    (34) array -> FLOATTYPE LBRACKET . NUMBER RBRACKET
    (35) array -> FLOATTYPE LBRACKET . ID RBRACKET

    NUMBER          shift and go to state 63
    ID              shift and go to state 64


state 31

    (76) function -> FUNCTION type ID . LPAREN parameter RPAREN block
    (78) function -> FUNCTION type ID . LPAREN RPAREN block

    LPAREN          shift and go to state 65


state 32

    (75) function -> FUNCTION VOID ID . LPAREN parameter RPAREN block
    (77) function -> FUNCTION VOID ID . LPAREN RPAREN block

    LPAREN          shift and go to state 66


state 33

    (32) array -> INTTYPE LBRACKET . ID RBRACKET
    (33) array -> INTTYPE LBRACKET . NUMBER RBRACKET

    ID              shift and go to state 67
    NUMBER          shift and go to state 68


state 34

    (36) array -> STRING LBRACKET . ID RBRACKET
    (37) array -> STRING LBRACKET . NUMBER RBRACKET

    ID              shift and go to state 70
    NUMBER          shift and go to state 69


state 35

    (94) predefined -> drawtriangle .

    ID              reduce using rule 94 (predefined -> drawtriangle .)
    IF              reduce using rule 94 (predefined -> drawtriangle .)
    PRINT           reduce using rule 94 (predefined -> drawtriangle .)
    WHILE           reduce using rule 94 (predefined -> drawtriangle .)
    DRAWLINE        reduce using rule 94 (predefined -> drawtriangle .)
    DRAWSQUARE      reduce using rule 94 (predefined -> drawtriangle .)
    DRAWTRIANGLE    reduce using rule 94 (predefined -> drawtriangle .)
    DRAWCIRCLE      reduce using rule 94 (predefined -> drawtriangle .)
    DRAWCURVE       reduce using rule 94 (predefined -> drawtriangle .)
    DRAWPOLYGON     reduce using rule 94 (predefined -> drawtriangle .)
    RBRACE          reduce using rule 94 (predefined -> drawtriangle .)


state 36

    (100) drawtriangle -> DRAWTRIANGLE . LPAREN idssexp COMMA idssexp COMMA color RPAREN SEMICOLON

    LPAREN          shift and go to state 71


state 37

    (85) cycle -> WHILE . LPAREN singularexp2 RPAREN block

    LPAREN          shift and go to state 72


state 38

    (82) write -> PRINT . LPAREN singularexp2 RPAREN SEMICOLON
    (83) write -> PRINT . LPAREN ID RPAREN SEMICOLON

    LPAREN          shift and go to state 73


state 39

    (15) statute -> predefined .

    ID              reduce using rule 15 (statute -> predefined .)
    IF              reduce using rule 15 (statute -> predefined .)
    PRINT           reduce using rule 15 (statute -> predefined .)
    WHILE           reduce using rule 15 (statute -> predefined .)
    DRAWLINE        reduce using rule 15 (statute -> predefined .)
    DRAWSQUARE      reduce using rule 15 (statute -> predefined .)
    DRAWTRIANGLE    reduce using rule 15 (statute -> predefined .)
    DRAWCIRCLE      reduce using rule 15 (statute -> predefined .)
    DRAWCURVE       reduce using rule 15 (statute -> predefined .)
    DRAWPOLYGON     reduce using rule 15 (statute -> predefined .)
    RBRACE          reduce using rule 15 (statute -> predefined .)


state 40

